--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-    id 'java'
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.13'
 }
 
 group 'org.skullition.excelreader'
@@ -8,6 +9,13 @@ version '1.0'
 repositories {
     mavenCentral()
 }
+
+javafx {
+    version = "11"
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
+
+mainClassName = 'skullition.ReadExcel'
 
 dependencies {
     implementation 'org.jetbrains:annotations:23.0.0'
